<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:text="@string/main_menu_cartel" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:id="@+id/button_tarea4"
        android:text="@string/button_tarea4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:id="@+id/button_tarea5"
        android:text="@string/button_tarea5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:id="@+id/button_tarea6"
        android:text="@string/button_tarea6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:id="@+id/button_tarea7"
        android:text="@string/button_tarea7" />


</LinearLayout>
